--- a/src/main/webapp/pages/user/edit.html
+++ b/src/main/webapp/pages/user/edit.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>User edit page</title>
+    <div th:insert="fragment/bootstrap :: cdncss"></div>
 </head>
 <body>
+<div th:insert="fragment/toolbar :: top"></div>
 
 <form th:method="PATCH" th:action="@{/user/{id}(id=${user.getIdUser()})}" th:object="${user}">
     <div>
