--- a/src/main/webapp/pages/user/index.html
+++ b/src/main/webapp/pages/user/index.html
@@ -2,19 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>History Operation</title>
+    <title>Index page</title>
     <div th:insert="fragment/bootstrap :: cdncss"></div>
 </head>
 <body>
 <div th:insert="fragment/toolbar :: top"></div>
-
-<div th:if="${#lists.isEmpty(resultsHistory)}">
-    History is empty
-</div>
-
-<div th:each="result : ${resultsHistory}">
-    <td th:text="${result.toString}">result</td>
-</div>
 
 </body>
 </html>
