--- a/src/main/webapp/pages/user/reg.html
+++ b/src/main/webapp/pages/user/reg.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration Page</title>
+    <div th:insert="fragment/bootstrap :: cdncss"></div>
 </head>
 <body>
-<form th:method="POST" th:action="@{/user/reg}" th:object="${newUser}">
+<div th:insert="fragment/toolbar :: top"></div>
+
+<form th:method="POST" th:action="@{/user/reg}" th:object="${user}">
     <div>
         <h3>Registration form:</h3>
-        <br>
-        <label for="name">Name</label>
-        <input type="text" th:field="*{name}" id="name"/>
-        <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name error</div>
         <br>
         <label for="login">Login</label>
         <input type="text" th:field="*{login}" id="login"/>
@@ -25,16 +24,16 @@
         <input type="text" th:field="*{email}" id="email">
         <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email error</div>
         <br>
-        <label for="secretQuestion">Secret question</label>
-        <input type="text" th:field="*{secretQuestion}" id="secretQuestion">
-        <div style="color:red" th:if="${#fields.hasErrors('secretQuestion')}" th:errors="*{secretQuestion}">Secret
-            Question error
-        </div>
-        <br>
+<!--        <label for="secretQuestion">Secret question</label>-->
+<!--        <input type="text" th:field="*{secretQuestion}" id="secretQuestion">-->
+<!--        <div style="color:red" th:if="${#fields.hasErrors('secretQuestion')}" th:errors="*{secretQuestion}">Secret Question error</div>-->
+<!--        <br>-->
         <br>
         <input type="submit" value="Add User">
         <br>
     </div>
 </form>
+
+
 </body>
 </html>
